--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "bootstrap.native": "^4.2.0",
-    "modern-normalize": "^1.1.0"
+    "flatpickr": "^4.6.13",
+    "modern-normalize": "^1.1.0",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
