--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://NatashaFedorova.github.io/parcel-test",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-test/"
+    "build": "parcel build src/*.html --public-url /parcel-test/",
+    "server": "json-server --watch db.json -p 8080 -d 500"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "axios": "^0.27.2",
     "bootstrap.native": "^4.2.0",
     "flatpickr": "^4.6.13",
+    "json-server": "^0.17.0",
     "modern-normalize": "^1.1.0",
     "moment": "^2.29.4"
   },
